app/static/style.css
/* ... */
/* smaller screens */
@media only screen and (max-width: 640px) {
    section {
        padding-left: .5rem;
        padding-right: .5rem;
    }
}

/* medium and larger screens */
@media only screen and (min-width: 640px) {
    .landing-hero {
        height: 75vh;
    }
    .landing-hero h1 {
        font-size: 40pt;
        line-height: 52pt;
        padding-top: 4rem;
    }
    .landing-hero h2 {
        font-size: 18pt;
        margin-bottom: 6rem;
    }
}

/* larger screens */
@media only screen and (min-width: 1000px) {
    .landing-hero h1,
    .landing-hero h2 {
        width: 54rem;
    }
    .landing-hero h1 {
        font-size: 50pt;
        line-height: 68pt;
        padding-top: 5rem;
    }
    .landing-hero h2 {
        font-size: 20pt;
        margin-bottom: 8rem;
    }
}

.landing-welcome {
    background-image: url("background/bg-1-welcome-div.png");
    padding-top: 3rem;
    padding-bottom: 5rem;
}

.landing-welcome__img img {
    padding-left: 5rem;
}

.landing-feature {
    background-image: url("img/img-3-feature-developer.png");
    background-position: center center;
    background-repeat: no-repeat;
    background-size: cover;
    padding-top: 10rem;
    padding-bottom: 6rem;
}

.landing-feature h2,
.landing-feature p {
    color: #FFF;
}

.landing-feature__header {
    padding-bottom: 1.5rem;
}

.landing-feature h2 {
    font-weight: 400;
}

.landing-feature h2 span {
    font-weight: 700;
}

.landing-feature__text {
    margin: 0 auto;
    max-width: 36rem;
    padding-bottom: 4rem;
    height: 14rem;
}

.landing-feature__item {
    padding-top: 7rem;
}

.landing-feature__img {
    margin: 0 auto;
    height: 4rem;
    width: 4rem;
    margin-bottom: 1rem;
    border-radius: 100px;
    background-color: #c5c4cf;
    cursor: pointer;
}
.landing-feature__img.selected {
    background-color: #1DD069;
}
.landing-feature__img img {
    height: 2.5rem;
    margin-top: .5rem;
}
.landing-feature__description span {
    font-size: 15pt;
    color: #FFF;
}
.landing-feature__description.selected {
    font-weight: 700;
}
.landing-feature__item.active .landing-feature__img {
    background-color: #1DD069;
}
.landing-feature__item.active a {
    font-weight: 700;
}


.landing-feature__arrow div {
    margin: 0 auto;
}
.landing-feature__arrow img {
    width: 2rem;
}


.landing-progress {
    background-image: url("background/bg-4-progress-div.png");
    background-position: center center;
    background-repeat: no-repeat;
    background-size: cover;
    padding-top: 3rem;
    padding-bottom: 5rem;
}

.landing-maps {
    background-image: url("background/bg-2-maps-div.png");
    background-position: center center;
    background-repeat: no-repeat;
    background-size: cover;
    padding-top: 3rem;
    padding-bottom: 3rem;
}

.landing-maps__header {
    color: #ffffff;
}

.landing-maps__header h3 span {
    font-weight: 700;
}

.landing-maps__carousel .cta {
    margin: 0 auto;
}

.landing-resources {
    background-image: url("background/bg-3-resources-div.png");
    background-position: center center;
    background-repeat: no-repeat;
    background-size: cover;
    padding-top: 3rem;
    padding-bottom: 5rem;
}

.landing-resources__text p {
    padding-bottom: 5rem;
}

.landing-resources__text p span {
    font-weight: 700;
}

.landing-resources__cards {
    padding-top: 3rem;
}

.landing-resources__cards .card {
    border: none;
    border-radius: .75rem;
    margin-bottom: 0;
}

.landing-resources__cards .card-section p {
    font-size: 15pt;
    margin-bottom: 0;
}

.landing-resources__cards .card-section--header {
    font-weight: 700;
}

.resource-choice {
    background-color: #fff;
    border-radius: .75rem;
    border: 0;
    box-shadow: 0px 20px 19px 0px rgba(135,135,135,0.3);
    margin-bottom: 2rem;
    -webkit-transition: all .2s ease-in;
    transition: all .2s ease-in;
}

.resource-choice:hover,
.resource-choice:focus,
.resource-choice:active  {
    transform: translateY(-6px);
    box-shadow: 0 10px 20px rgba(0, 0, 0, .2);
    cursor: pointer;
}


/* Footer */
#footer-stay-in-touch-div{
    background-image: url("background/bg-5-stay-in-touch-div.png");
    color: #ffffff;
    padding-top: 3.5rem;
    padding-bottom: 7rem;
}

#footer-stay-in-touch-div p,
#footer-stay-in-touch-div h1 {
    color: #ffffff;
}

#footer-stay-in-touch-div p {
    max-width: 30rem;
}

.footer-stay-in-touch__img a {
    float: right;
    padding-left: 5rem;
}

#footer-contact-div{
    padding-top: 7rem;
    padding-bottom: 7rem;
    background-color: #eeeff1;
    font-size: 14pt;
}

.footer-contact__text {
    padding-left: .5rem;
}

.footer-contact__header {
    font-weight: 700;
    text-transform: uppercase;
}

#footer-contact-div p {
    font-size: 14pt;
    line-height: 18pt;
    padding-top: 1rem;
    padding-bottom: 1rem;
}

.footer-contact__arrow div {
    background-color: #1DD069;
    width: 4rem;
    height: 4rem;
    border-radius: 100px;
    text-align: center;
    float: right;
    clear: both;
}

.footer-contact__arrow div:link,
.footer-contact__arrow div:visited {
    -webkit-transition: transform .2s ease-in;
    transition: transform .2s ease-in;
}

.footer-contact__arrow div:hover {
    transform: translateY(-3px);
    box-shadow: 0 5px 10px rgba(0, 0, 0, .2);
    cursor: pointer;
}

.footer-contact__arrow img {
    width: 1.875rem;
    display: inline-block;
    height: 100%;
    vertical-align: middle;
}

#footer-logos-div{
    background-color: #ffffff;
    font-size: 14pt;
    line-height: 18pt;
    padding-top: 4rem;
    padding-bottom: 4rem;
}

#footer-logos-div p {
    font-size: 14pt;
    line-height: 18pt;
}

.footer-logos__img {
    text-align: center;
}

.footer-logos__img--giz {
    text-align: left;
}

@media only screen and (min-width: 640px) {
    .footer-logos__img--giz {
        position: relative;
    }
    
    .footer-logos__img--giz div {
        position: absolute;
        bottom: 0;
        right: 0;
    }
}
/* ... */

